<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AgentComplain">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorUserLoginTitle"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/app_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_20ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText_agent_search_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_3sdp"
            android:layout_weight="1"
            android:background="@drawable/search_bar_bg"
            android:drawableEnd="@drawable/ic_search"
            android:padding="@dimen/_6sdp"
            android:textColor="@android:color/white"
            android:textCursorDrawable="@drawable/edittext_cursor"
            android:textSize="@dimen/_16ssp"
            tools:ignore="LabelFor,TextFields" />

    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/a_c_time"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/recycler_view_headers_borders"
                    android:gravity="start"
                    android:padding="@dimen/_3sdp"
                    android:text="@string/str_time"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/a_c_code"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/recycler_view_headers_borders"
                    android:gravity="start"
                    android:padding="@dimen/_3sdp"
                    android:text="@string/str_reg_no"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/a_c_unique"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/recycler_view_headers_borders"
                    android:gravity="start"
                    android:padding="@dimen/_3sdp"
                    android:text="@string/str_unique_code"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/a_c_model"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/recycler_view_headers_borders"
                    android:gravity="start"
                    android:padding="@dimen/_3sdp"
                    android:text="@string/str_model"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/a_c_name"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/recycler_view_headers_borders"
                    android:gravity="start"
                    android:padding="@dimen/_3sdp"
                    android:text="@string/str_name"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/a_c_email"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/recycler_view_headers_borders"
                    android:gravity="start"
                    android:padding="@dimen/_3sdp"
                    android:text="@string/str_email"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/a_c_phone"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/recycler_view_headers_borders"
                    android:gravity="start"
                    android:padding="@dimen/_3sdp"
                    android:text="@string/complains_phone"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/a_c_remarks"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/recycler_view_headers_borders"
                    android:gravity="start"
                    android:padding="@dimen/_3sdp"
                    android:text="@string/str_remarks"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/a_c_attach"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/recycler_view_headers_borders"
                    android:gravity="start"
                    android:padding="@dimen/_3sdp"
                    android:text="@string/str_attachment"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_security_agents_complains"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />

        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>